[gd_scene load_steps=10 format=2]

[ext_resource path="res://Assets/Fonts/Lato-Bold.ttf" type="FontFile" id=1]
[ext_resource path="res://Scripts/Menu/OptionsMenu.gd" type="Script" id=2]

[sub_resource type="FontFile" id=1]
size = 42
font_data = ExtResource( 1 )

[sub_resource type="FontFile" id=2]
size = 20
font_data = ExtResource( 1 )

[sub_resource type="FontFile" id=6]
size = 42
font_data = ExtResource( 1 )

[sub_resource type="FontFile" id=7]
size = 42
font_data = ExtResource( 1 )

[sub_resource type="FontFile" id=8]
size = 42
font_data = ExtResource( 1 )

[sub_resource type="FontFile" id=3]
size = 42
font_data = ExtResource( 1 )

[sub_resource type="FontFile" id=5]
size = 42
font_data = ExtResource( 1 )

[node name="OptionsMenu" type="Popup"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -460.0
offset_top = -295.0
offset_right = 460.0
offset_bottom = 295.0
custom_minimum_size = Vector2( 920, 590 )
script = ExtResource( 2 )

[node name="Background" type="ColorRect" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -460.5
offset_top = -294.5
offset_right = 460.5
offset_bottom = 294.5
color = Color( 0.415686, 0.415686, 0.415686, 1 )

[node name="SettingsTab" type="TabContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -460.0
offset_top = -294.5
offset_right = 460.5
offset_bottom = 294.5
tab_alignment = 0

[node name="Video" type="TabBar" parent="SettingsTab"]
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 4.0
offset_top = 32.0
offset_right = -4.0
offset_bottom = -4.0

[node name="MarginContainer" type="MarginContainer" parent="SettingsTab/Video"]
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 25.0
offset_top = 25.0
offset_right = -25.0
offset_bottom = -25.0

[node name="VideoSettings" type="GridContainer" parent="SettingsTab/Video/MarginContainer"]
offset_right = 862.0
offset_bottom = 503.0
theme_override_constants/v_separation = 20
columns = 2

[node name="ScreenMode" type="Label" parent="SettingsTab/Video/MarginContainer/VideoSettings"]
offset_right = 256.0
offset_bottom = 51.0
size_flags_vertical = 1
theme_override_fonts/font = SubResource( 1 )
text = "Display Mode"

[node name="DisplayOptionBtn" type="OptionButton" parent="SettingsTab/Video/MarginContainer/VideoSettings"]
offset_left = 736.0
offset_right = 862.0
offset_bottom = 51.0
size_flags_horizontal = 10
theme_override_fonts/font = SubResource( 2 )
text = "Windowed"
items = [ "Windowed", null, false, 0, null, "Fullscreen", null, false, 1, null ]
selected = 0

[node name="VsyncLabel" type="Label" parent="SettingsTab/Video/MarginContainer/VideoSettings"]
offset_top = 71.0
offset_right = 256.0
offset_bottom = 122.0
theme_override_fonts/font = SubResource( 6 )
text = "Vsync"

[node name="VsyncBtn" type="CheckButton" parent="SettingsTab/Video/MarginContainer/VideoSettings"]
offset_left = 786.0
offset_top = 71.0
offset_right = 862.0
offset_bottom = 122.0
size_flags_horizontal = 10

[node name="DisplayFpsLabel" type="Label" parent="SettingsTab/Video/MarginContainer/VideoSettings"]
offset_top = 142.0
offset_right = 256.0
offset_bottom = 193.0
theme_override_fonts/font = SubResource( 6 )
text = "Display FPS"

[node name="DisplayFpsBtn" type="CheckButton" parent="SettingsTab/Video/MarginContainer/VideoSettings"]
offset_left = 786.0
offset_top = 142.0
offset_right = 862.0
offset_bottom = 193.0
size_flags_horizontal = 10

[node name="MaxFpsLabel" type="Label" parent="SettingsTab/Video/MarginContainer/VideoSettings"]
offset_top = 213.0
offset_right = 256.0
offset_bottom = 264.0
theme_override_fonts/font = SubResource( 7 )
text = "Max FPS"

[node name="HBoxContainer" type="HBoxContainer" parent="SettingsTab/Video/MarginContainer/VideoSettings"]
offset_left = 374.0
offset_top = 213.0
offset_right = 862.0
offset_bottom = 264.0
size_flags_horizontal = 10

[node name="MaxFpsVal" type="Label" parent="SettingsTab/Video/MarginContainer/VideoSettings/HBoxContainer"]
offset_right = 84.0
offset_bottom = 51.0
theme_override_fonts/font = SubResource( 8 )
text = "Max"

[node name="MaxFpsSlider" type="HSlider" parent="SettingsTab/Video/MarginContainer/VideoSettings/HBoxContainer"]
offset_left = 88.0
offset_right = 488.0
offset_bottom = 51.0
custom_minimum_size = Vector2( 400, 0 )
size_flags_horizontal = 10
size_flags_vertical = 1
min_value = 30.0
max_value = 500.0
value = 500.0

[node name="Audio" type="TabBar" parent="SettingsTab"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 4.0
offset_top = 32.0
offset_right = -4.0
offset_bottom = -4.0

[node name="MarginContainer2" type="MarginContainer" parent="SettingsTab/Audio"]
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 25.0
offset_top = 25.0
offset_right = -25.0
offset_bottom = -25.0

[node name="AudioSettings" type="GridContainer" parent="SettingsTab/Audio/MarginContainer2"]
offset_right = 862.0
offset_bottom = 503.0
theme_override_constants/v_separation = 20
columns = 2

[node name="MasterVolLabel" type="Label" parent="SettingsTab/Audio/MarginContainer2/AudioSettings"]
offset_right = 288.0
offset_bottom = 51.0
theme_override_fonts/font = SubResource( 3 )
text = "Master Volume"

[node name="MasterVolSlider" type="HSlider" parent="SettingsTab/Audio/MarginContainer2/AudioSettings"]
offset_left = 462.0
offset_right = 862.0
offset_bottom = 51.0
custom_minimum_size = Vector2( 400, 0 )
size_flags_horizontal = 10
size_flags_vertical = 1
min_value = -50.0
max_value = 0.0
value = -10.0
rounded = true

[node name="MusicVolLabel" type="Label" parent="SettingsTab/Audio/MarginContainer2/AudioSettings"]
offset_top = 71.0
offset_right = 288.0
offset_bottom = 122.0
theme_override_fonts/font = SubResource( 3 )
text = "Music Volume"

[node name="MusicVolSlider" type="HSlider" parent="SettingsTab/Audio/MarginContainer2/AudioSettings"]
offset_left = 462.0
offset_top = 71.0
offset_right = 862.0
offset_bottom = 122.0
custom_minimum_size = Vector2( 400, 0 )
size_flags_horizontal = 10
size_flags_vertical = 1
min_value = -50.0
max_value = 0.0
value = -10.0
rounded = true

[node name="SfxVolLabel" type="Label" parent="SettingsTab/Audio/MarginContainer2/AudioSettings"]
offset_top = 142.0
offset_right = 288.0
offset_bottom = 193.0
theme_override_fonts/font = SubResource( 3 )
text = "SFX Volume"

[node name="SfxVolSlider" type="HSlider" parent="SettingsTab/Audio/MarginContainer2/AudioSettings"]
offset_left = 462.0
offset_top = 142.0
offset_right = 862.0
offset_bottom = 193.0
custom_minimum_size = Vector2( 400, 0 )
size_flags_horizontal = 10
size_flags_vertical = 1
min_value = -50.0
max_value = 0.0
value = -10.0
rounded = true

[node name="Gameplay" type="TabBar" parent="SettingsTab"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 4.0
offset_top = 32.0
offset_right = -4.0
offset_bottom = -4.0

[node name="MarginContainer3" type="MarginContainer" parent="SettingsTab/Gameplay"]
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 25.0
offset_top = 25.0
offset_right = -25.0
offset_bottom = -25.0
theme_override_constants/margin_top = 6

[node name="GameplaySettings" type="GridContainer" parent="SettingsTab/Gameplay/MarginContainer3"]
offset_top = 6.0
offset_right = 862.0
offset_bottom = 503.0
theme_override_constants/v_separation = 20
columns = 2

[node name="MouseSensLabel" type="Label" parent="SettingsTab/Gameplay/MarginContainer3/GameplaySettings"]
offset_right = 331.0
offset_bottom = 51.0
theme_override_fonts/font = SubResource( 5 )
text = "Mouse Sensitivity"

[node name="MouseSensOption" type="HBoxContainer" parent="SettingsTab/Gameplay/MarginContainer3/GameplaySettings"]
offset_left = 401.0
offset_right = 862.0
offset_bottom = 51.0
size_flags_horizontal = 10

[node name="MouseSensAmount" type="Label" parent="SettingsTab/Gameplay/MarginContainer3/GameplaySettings/MouseSensOption"]
offset_right = 57.0
offset_bottom = 51.0
theme_override_fonts/font = SubResource( 3 )
text = "0.1"

[node name="MouseSensSlider" type="HSlider" parent="SettingsTab/Gameplay/MarginContainer3/GameplaySettings/MouseSensOption"]
offset_left = 61.0
offset_right = 461.0
offset_bottom = 44.0
custom_minimum_size = Vector2( 400, 0 )
size_flags_horizontal = 10
size_flags_vertical = 1
min_value = 0.05
max_value = 3.0
step = 0.01
value = 0.1

[connection signal="item_selected" from="SettingsTab/Video/MarginContainer/VideoSettings/DisplayOptionBtn" to="." method="_on_DisplayOptionBtn_item_selected"]
[connection signal="toggled" from="SettingsTab/Video/MarginContainer/VideoSettings/VsyncBtn" to="." method="_on_VsyncBtn_toggled"]
[connection signal="toggled" from="SettingsTab/Video/MarginContainer/VideoSettings/DisplayFpsBtn" to="." method="_on_DisplayFpsBtn_toggled"]
[connection signal="value_changed" from="SettingsTab/Video/MarginContainer/VideoSettings/HBoxContainer/MaxFpsSlider" to="." method="_on_MaxFpsSlider_value_changed"]
[connection signal="value_changed" from="SettingsTab/Audio/MarginContainer2/AudioSettings/MasterVolSlider" to="." method="_on_MasterVolSlider_value_changed"]
[connection signal="value_changed" from="SettingsTab/Audio/MarginContainer2/AudioSettings/MusicVolSlider" to="." method="_on_MusicVolSlider_value_changed"]
[connection signal="value_changed" from="SettingsTab/Audio/MarginContainer2/AudioSettings/SfxVolSlider" to="." method="_on_SfxVolSlider_value_changed"]
[connection signal="value_changed" from="SettingsTab/Gameplay/MarginContainer3/GameplaySettings/MouseSensOption/MouseSensSlider" to="." method="_on_MouseSensSlider_value_changed"]
